Added a couple of articles

--- a/index.html
+++ b/index.html
@@ -213,6 +213,26 @@
       </div>
     </div>
 
+    <div class="card" data-tab="technology">
+      <div class="headline">How Google and Youtube Changed my Life!</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Shaun Kolich</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="jquery">
+      <div class="headline">Learning the ropes of Jquery and JS6</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By Shaun Kolich</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
